--- a/campusTaobao/pom.xml
+++ b/campusTaobao/pom.xml
@@ -43,12 +43,12 @@
             <scope>compile</scope>
         </dependency>
 <!--        sqlserver数据库jdbc-->
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <version>4.0</version>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.microsoft.sqlserver</groupId>-->
+<!--            <artifactId>sqljdbc4</artifactId>-->
+<!--            <version>4.0</version>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
         <!--mysql驱动-->
         <dependency>
             <groupId>mysql</groupId>
